--- a/.cycloid.yml
+++ b/.cycloid.yml
@@ -3,7 +3,7 @@ version: '2'
 # Configuration of the Cycloid stack
 name: 'External worker'
 canonical: 'stack-external-worker'
-status: 'public'
+status: 'private'
 description: |
   This stack will deploy an Amazon ASG with external workers for Cycloid.io.
 keywords:
